--- a/beauty.css
+++ b/beauty.css
@@ -34,7 +34,11 @@ text-align: center;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    
 
+}
+body{
+    background-color: aliceblue;
 }
 .heart{
     position: relative;
@@ -83,6 +87,7 @@ text-align: center;
 #ball {
     width: 250px;
     height: 250px;
+    border-radius: 50%;
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -93,7 +98,8 @@ text-align: center;
     margin: auto;
     margin-top: 150px;
 
-
+    
+    
     
     background-image: url(img/spin.png);
     
@@ -101,6 +107,19 @@ text-align: center;
     -webkit-animation:spin 3s infinite linear;
     animation: spin 3s infinite linear;
     
+
+}
+
+#bc{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    display: none;
+    position: fixed;
+    margin-top: 150px;
+    margin-left:40%;
+    z-index: 2;
+    background-color: aqua;
 
 }
 
